fixed project page spacing

--- a/client/src/components/projects/Projects.css
+++ b/client/src/components/projects/Projects.css
@@ -12,8 +12,13 @@ p {
 }
 
 .project-card {
-  margin-top: 10vh;
-  max-width: 80vh;
+  margin-top: 8vh;
+  max-width: 68vh;
+}
+
+.ant-card-cover {
+  width: 100%;
+  padding: 0 1rem;
 }
 
 .project-card img {
